Fixed bug with translate(0,0)

--- a/demo/purejs_onepage_scroll_demo.html
+++ b/demo/purejs_onepage_scroll_demo.html
@@ -404,6 +404,10 @@
       letter-spacing: 1px;
       font-size: 14px;
     }
+    
+    iframe {
+    	transform: translate(0, 0);
+    }
 	</style>
 </head>
 <body>
